fix first element height beacase padding in a

--- a/小米商城/小米界面布局.html
+++ b/小米商城/小米界面布局.html
@@ -63,6 +63,9 @@
         .dress .list  .item.item1 {
             height: 614px;
         }
+        .dress .list  .item.item1 a {
+            padding:0;
+        }
         .dress .list .item.item9,
         .dress .list .item.item10 {
             height: 143px;
